# pedsim_dataset_generator

./: CMakeLists.txt  LICENSE  package.xml
include/: pedsim_data_recorder.hpp
launch/: multi_agent_costmap.launch.py  nav2_costmap_server.launch.py  nav2_map_server.launch.py
params/: nav2_param_agent_1.yaml  nav2_param_agent_2.yaml  nav2_param_agent_3.yaml
src/: agent_pose_publisher.cpp  pedsim_data_recorder.cpp
