cmake_minimum_required(VERSION 3.8)
project(pedsim_dataset_generator)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

add_executable(agent_pose_publisher src/agent_pose_publisher.cpp)
ament_target_dependencies(subgoal_publisher
       rclcpp
       geometry_msgs
       nav_msgs
       visualization_msgs
       )

install(TARGETS agent_pose_publisher
  DESTINATION lib/${PROJECT_NAME})

  # Install launch files and directories.
install(DIRECTORY
src launch include config ${PROJECT_NAME}
DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
